python/testData/inspections/PyCompatibilityInspection/numericLiteralExpression.py
a = <error descr="Python does not support a trailing 'u'">12u</error>
b = <warning descr="Python versions 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11 do not support a trailing 'l'">12l</warning>
c = <error descr="Python does not support a trailing 'll'">12ll</error>
d = <error descr="Python does not support a trailing 'U'">12U</error>
e = <warning descr="Python versions 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11 do not support a trailing 'L'">12L</warning>
f = <error descr="Python does not support a trailing 'LL'">12LL</error>
g = <error descr="Python does not support a trailing 'ul'">0x12ful</error>
h = <error descr="Python does not support a trailing 'uL'">0X12fuL</error>
i = <error descr="Python does not support a trailing 'Ul'">12Ul</error>
j = <error descr="Python does not support a trailing 'UL'">12UL</error>
k = <error descr="Python does not support a trailing 'ull'">0o12ull</error>
l = <error descr="Python does not support a trailing 'uLL'">0O12uLL</error>
m = <error descr="Python does not support a trailing 'Ull'">0b1Ull</error>
n = <error descr="Python does not support a trailing 'ULL'">0B1ULL</error>
o = <error descr="Python does not support a trailing 'lu'">12lu</error>
p = <error descr="Python does not support a trailing 'lU'">12lU</error>
q = <error descr="Python does not support a trailing 'Lu'">12Lu</error>
r = <error descr="Python does not support a trailing 'LU'">12LU</error>
s = <error descr="Python does not support a trailing 'llu'">12llu</error>
t = <error descr="Python does not support a trailing 'llU'">12llU</error>
u = <error descr="Python does not support a trailing 'LLu'">12LLu</error>
v = <error descr="Python does not support a trailing 'LLU'">12LLU</error>
w = <warning descr="Python versions 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11 do not support this syntax. It requires '0o' prefix for octal literals">04</warning><error descr="End of statement expected">8</error>